--- a/README.rdoc
+++ b/README.rdoc
@@ -5,3 +5,8 @@ A simple little Sinatra app.
 After configuring your Pivotal Tracker name, token, and WIP limit you can visualize whether you've started too many stories at one time.
 
 Also included in /bin is a cli app to get your feet wet using the Pivotal Tracker api.
+
+Libs:
+http://sinatrarb.com
+https://github.com/jsmestad/pivotal-tracker
+http://jquery.com/
