--- a/README.rdoc
+++ b/README.rdoc
@@ -13,3 +13,5 @@ http://www.sinatrarb.com
 https://github.com/jsmestad/pivotal-tracker
 
 http://jquery.com/
+
+![WIP](https://img.skitch.com/20110214-s58qnqm5qg34qa4jrnf58bh1m.jpg)
